# emailalias-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.stage.yml  docker-compose.yml  pyproject.toml
.github/workflows/: cd-stage.yml  cd.yml  ci.yml
app/: main.py
app/core/: config.py  dependencies.py  logger.py  mail_provider.py  notifications.py  rate_limiter.py  security.py
app/infrastructure/: beget_mail_provider.py  mail_provider.py  stub_otp_sender.py
app/models/: database.py  domain.py
app/repositories/: aliases.py  domains.py  tokens.py  users.py  verification.py
app/schemas/: common.py  requests.py  responses.py  token.py  tokens.py  verification.py
app/services/: aliases.py  domains.py  passwords.py  tokens.py  users.py  verifications.py
docs/: ONBOARDING.md  TESTING.md  ci-cd.md
docs/adr/: 001-move-token-storage-to-postgres.md  002-split-docker-compose-for-multi-environment.md  003-rate-limit-toggle-via-env.md
load-tests/helpers/: assertions.js  http.js  random.js
load-tests/scenarios/: verifications.post.503.js
load-tests/setup/: verification_patch.py
load-tests/unit/: verification.patch.load.js  verification.patch.smoke.js  verifications.post.load.js  verifications.post.smoke.js
loadtests/: helpers.js
loadtests/unit/: verifications.stress.js
migrations/: env.py
migrations/versions/: 0acf23b6977b_rename_alias_status_deleting_to_deleted.py  17c7bcc991f6_add_alias_status_forwarded.py  25349345103a_add_table_alias.py  3ce414a0f0fa_add_table_domains.py  6b1cbb897dca_add_table_tokens.py  7391cba70b93_remove_alias_status_provisioned_and_.py  ad2c6f4253e4_initial_tables.py  (+1 more)
nginx/: nginx.conf
tests/: conftest.py  helpers.py
(+61 files in other folders)
